// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser: rows > injection: { x | y = 1 } 1`] = `
{
  "label": "y",
  "term": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "x",
    },
  },
  "type": "injection",
  "value": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 1,
    },
  },
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: rows > projection: x.y 1`] = `
{
  "label": "y",
  "term": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "x",
    },
  },
  "type": "projection",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: rows > row extension: [ x: 2 ] 1`] = `
{
  "row": {
    "label": "x",
    "row": {
      "type": "empty",
    },
    "type": "extension",
    "value": {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 2,
      },
    },
  },
  "type": "row",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: rows > row polymorphic: [ x: 1 | r ] 1`] = `
{
  "row": {
    "label": "x",
    "row": {
      "type": "variable",
      "variable": {
        "type": "name",
        "value": "r",
      },
    },
    "type": "extension",
    "value": {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 1,
      },
    },
  },
  "type": "row",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: rows > shorthand injection: { | y = 1 } 1`] = `
{
  "annotation": undefined,
  "body": {
    "label": "y",
    "term": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "x",
      },
    },
    "type": "injection",
    "value": {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 1,
      },
    },
  },
  "icit": "Explicit",
  "type": "lambda",
  "variable": "x",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: rows > shorthand projection: .x 1`] = `
{
  "annotation": undefined,
  "body": {
    "label": "x",
    "term": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "x",
      },
    },
    "type": "projection",
  },
  "icit": "Explicit",
  "type": "lambda",
  "variable": "x",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: rows > struct polymorphic: { x: 1 | r } 1`] = `
{
  "row": {
    "label": "x",
    "row": {
      "type": "variable",
      "variable": {
        "type": "name",
        "value": "r",
      },
    },
    "type": "extension",
    "value": {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 1,
      },
    },
  },
  "type": "struct",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: rows > struct: { x: 1, y: 2 } 1`] = `
{
  "row": {
    "label": "x",
    "row": {
      "label": "y",
      "row": {
        "type": "empty",
      },
      "type": "extension",
      "value": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 2,
        },
      },
    },
    "type": "extension",
    "value": {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 1,
      },
    },
  },
  "type": "struct",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: rows > tagged: #x 1 1`] = `
{
  "tag": "x",
  "term": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 1,
    },
  },
  "type": "tagged",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: rows > tuple with tail: {1, 2 | r} 1`] = `
{
  "row": {
    "label": "0",
    "row": {
      "label": "1",
      "row": {
        "type": "variable",
        "variable": {
          "type": "name",
          "value": "r",
        },
      },
      "type": "extension",
      "value": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 2,
        },
      },
    },
    "type": "extension",
    "value": {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 1,
      },
    },
  },
  "type": "tuple",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: rows > tuple: {1, 2} 1`] = `
{
  "row": {
    "label": "0",
    "row": {
      "label": "1",
      "row": {
        "type": "empty",
      },
      "type": "extension",
      "value": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 2,
        },
      },
    },
    "type": "extension",
    "value": {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 1,
      },
    },
  },
  "type": "tuple",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: rows > variant: | #x 1 | #y 2 1`] = `
{
  "row": {
    "label": "x",
    "row": {
      "label": "y",
      "row": {
        "type": "empty",
      },
      "type": "extension",
      "value": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 2,
        },
      },
    },
    "type": "extension",
    "value": {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 1,
      },
    },
  },
  "type": "variant",
  Symbol(snapshot:stripped): true,
}
`;
